<resources>
    <string name="app_name">UserProfile</string>
    <string name="person_name">Forid Pathan</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="gender">Gender</string>
    <string name="male">Male:</string>
    <string name="female">Female:</string>
    <string name="skills">Skills</string>
    <string name="java">Java</string>
    <string name="android">Android</string>
    <string name="python">Python</string>
    <string name="c">C</string>
    <string name="enter_your_name">Enter your name</string>
</resources>
