<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/img_profile_pic"
                android:src="@drawable/ic_person_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_name"
                android:textSize="32dp"
                android:hint="@string/enter_your_name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/top_bg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/inc_phone"
                        android:src="@drawable/ic_call_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:id="@+id/tv_phone"
                        android:textSize="28px"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/inc_email"
                        android:src="@drawable/ic_email_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:id="@+id/tv_email"
                        android:textSize="28px"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/inc_address"
                        android:src="@drawable/ic_location_on_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:id="@+id/tv_address"
                        android:textSize="28px"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/inc_gender"
                        android:src="@drawable/ic_wc_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:id="@+id/tv_gender"
                        android:textSize="28px"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="50dp">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rg_gneder"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />
                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/inc_skills"
                        android:src="@drawable/ic_school_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skills"
                        android:id="@+id/tv_skills"
                        android:textSize="28px"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp"
                android:gravity="center|left">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/java"
                    android:id="@+id/cb_java"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android"
                    android:id="@+id/cb_android"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/python"
                    android:id="@+id/cb_python"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:id="@+id/cb_c"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                android:background="#1156d6"
                android:textColor="#fff"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>